--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 # defaults for nrpe
+nrpe_role_version: 2.6.0
 
 nrpe_enable: false
 nrpe_install: true
@@ -13,4 +14,3 @@ nrpe_log_file_mode: '0640'
 nrpe_conf: []
 
 # EOF
-...
