--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -1,15 +1,13 @@
 ---
-
-- name: "service: Config FreeBSD"
+- name: "Service: Config FreeBSD"
   ansible.builtin.include_tasks: rcconf.yml
   when: ansible_os_family == 'FreeBSD'
 
-- name: "service: {{ state }} {{ nrpe_service }}"
+- name: "Service: {{ state }} {{ nrpe_service }}"
   ansible.builtin.service:
     name: "{{ nrpe_service }}"
     state: "{{ state }}"
   vars:
-    state: "{{ nrpe_enable|bool|ternary('started', 'stopped') }}"
+    state: "{{ nrpe_enable | bool | ternary('started', 'stopped') }}"
 
 # EOF
-...
