--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -3,7 +3,7 @@
   ansible.builtin.include_tasks: rcconf.yml
   when: ansible_os_family == 'FreeBSD'
 
-- name: "Service: {{ state }} {{ nrpe_service }}"
+- name: "Service: {{ state ~ ' ' ~ nrpe_service }}"
   ansible.builtin.service:
     name: "{{ nrpe_service }}"
     state: "{{ state }}"
