--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,27 +2,31 @@
 # handlers for nrpe
 
 - name: Enable and start nrpe
+  listen: enable and start nrpe
   ansible.builtin.service:
     name: "{{ nrpe_service }}"
     state: started
     enabled: true
 
 - name: Disable and stop nrpe
+  listen: disable and stop nrpe
   ansible.builtin.service:
     name: "{{ nrpe_service }}"
     state: stopped
     enabled: false
 
 - name: Restart nrpe
+  listen: restart nrpe
   ansible.builtin.service:
     name: "{{ nrpe_service }}"
     state: restarted
-  when: nrpe_enable|bool
+  when: nrpe_enable | bool
 
 - name: Reload nrpe
+  listen: reload nrpe
   ansible.builtin.service:
     name: "{{ nrpe_service }}"
     state: reloaded
-  when: nrpe_enable|bool
+  when: nrpe_enable | bool
 
 # EOF
