--- a/tasks/debug.yml
+++ b/tasks/debug.yml
@@ -2,6 +2,7 @@
 - name: Nrpe Debug
   vars:
     msg: |-
+      nrpe_role_version: {{ nrpe_role_version }}
       ansible_architecture: {{ ansible_architecture }}
       ansible_os_family: {{ ansible_os_family }}
       ansible_distribution: {{ ansible_distribution }}
